feat: 将AES迁移到Java服务
